add recipe ui
