# api/gen/go/ogen/oas_response_encoders_gen.go
@@ -46,6 +46,19 @@ func encodeAuthListTokensResponse(response *AuthTokenList, w http.ResponseWriter
 	return nil
 }
 
+func encodeRecipesListResponse(response *RecipePage, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeRecipesSearchResponse(response *RecipeSearchResultList, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
